# jupyterlite-zestables

./: .gitignore  CLAUDE.md  README.md  package.json  requirements.txt
build-tool/: build-runtime.js  build.js
examples/data-analysis/: assignment.ipynb
examples/hello-world/: assignment.ipynb
examples/physics-simulation/: assignment.ipynb
examples/python-basics/: assignment.ipynb
examples/python-explorer/: assignment.ipynb
extension/: install.json  package.json  pyproject.toml  tsconfig.json
extension/jupyterlite_zest_bridge/: __init__.py
extension/src/: index.ts
extension/style/: index.css
template/: bridge-shim.js  bridge.js  index.html  review.html  zest.json
